# docker-autocompose

./: .gitignore  Dockerfile  README.md  autocompose.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml
src/: autocompose.py
