[tool.poetry]
name = "docker-autocompose"
version = "1.3.0"
description = "Generate a docker-compose yaml definition from a running container"
authors = ["Red5d"]
keywords = ["docker", "yaml", "container"]
license = "GPLv2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]
homepage = "https://github.com/Red5d/docker-autocompose"
documentation = "https://github.com/Red5d/docker-autocompose/blob/master/README.md"
repository = "https://github.com/Red5d/docker-autocompose.git"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
# see https://python-poetry.org/docs/dependency-specification/ for version specifiers
python = ">=3.8"
pyaml = "~24.9.0"
docker = "~7.1.0"

[tool.poetry.scripts]
autocompose = "src.autocompose:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
